<?xml version="1.0"?>
<package format="2">
  <name>turtle_control</name>
  <version>0.0.0</version>
  <description>The turtle_control package</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
</package>